// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 1`] = `
<div>
  <div
    class="flex items-center gap-2 text-2xl w-full text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="inputs.play_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-play-button"
      title="inputs.play_audio_aria null"
    >
      <div>
        play circle outline
      </div>
    </button>
    <code
      class="text-xs"
      title="audio.audio_time_elapsed_title null"
    >
      00:00
    </code>
    <input
      aria-label="audio.audio_scrubber_aria null"
      class="min-w-0 appearance-none [&::-webkit-slider-runnable-track]:bg-stone-500 [&::-webkit-slider-runnable-track]:h-[2px] [&::-webkit-slider-runnable-track]:cursor-pointer dark:[&::-webkit-slider-runnable-track]:bg-white [&::-moz-range-track]:bg-stone-500 [&::-moz-range-track]:h-[2px] [&::-moz-range-track]:cursor-pointer dark:[&::-moz-range-track]:bg-white [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:[-webkit-appearance: none] [&::-webkit-slider-thumb]:bg-amber-900 [&::-webkit-slider-thumb]:w-[6px] [&::-webkit-slider-thumb]:h-[15px] [&::-webkit-slider-thumb]:shadow-md [&::-webkit-slider-thumb]:rounded-xs [&::-webkit-slider-thumb]:mt-[-7px] [&::-webkit-slider-thumb]:cursor-pointer dark:[&::-webkit-slider-thumb]:bg-orange-300 [&::-moz-range-thumb]:appearance-none [&::-moz-range-thumb]:bg-amber-900 [&::-moz-range-thumb]:w-[6px] [&::-moz-range-thumb]:h-[15px] [&::-moz-range-thumb]:shadow-md [&::-moz-range-thumb]:rounded-xs [&::-moz-range-thumb]:mt-[-7px] [&::-moz-range-thumb]:cursor-pointer dark:[&::-moz-range-thumb]:bg-orange-300"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="audio.audio_time_total_title null"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="audio.change_playback_speed_aria null"
        class="h-10 w-10 flex items-center justify-center shrink-0"
        data-testid="audio-player-speed-button"
        title="audio.change_playback_speed_aria null"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="audio.audio_speed_menu_label null"
        class=" absolute -left-12 p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="audio.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
    <button
      aria-label="audio.stop_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-stop-button"
      title="audio.stop_audio_aria null"
    >
      <div>
        stop circle
      </div>
    </button>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
  />
</div>
`;

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 2`] = `
<div>
  <div
    class="flex items-center gap-2 text-2xl w-full text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="inputs.pause_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-play-button"
      title="inputs.pause_audio_aria null"
    >
      <div>
        pause circle outline
      </div>
    </button>
    <code
      class="text-xs"
      title="audio.audio_time_elapsed_title null"
    >
      00:00
    </code>
    <input
      aria-label="audio.audio_scrubber_aria null"
      class="min-w-0 appearance-none [&::-webkit-slider-runnable-track]:bg-stone-500 [&::-webkit-slider-runnable-track]:h-[2px] [&::-webkit-slider-runnable-track]:cursor-pointer dark:[&::-webkit-slider-runnable-track]:bg-white [&::-moz-range-track]:bg-stone-500 [&::-moz-range-track]:h-[2px] [&::-moz-range-track]:cursor-pointer dark:[&::-moz-range-track]:bg-white [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:[-webkit-appearance: none] [&::-webkit-slider-thumb]:bg-amber-900 [&::-webkit-slider-thumb]:w-[6px] [&::-webkit-slider-thumb]:h-[15px] [&::-webkit-slider-thumb]:shadow-md [&::-webkit-slider-thumb]:rounded-xs [&::-webkit-slider-thumb]:mt-[-7px] [&::-webkit-slider-thumb]:cursor-pointer dark:[&::-webkit-slider-thumb]:bg-orange-300 [&::-moz-range-thumb]:appearance-none [&::-moz-range-thumb]:bg-amber-900 [&::-moz-range-thumb]:w-[6px] [&::-moz-range-thumb]:h-[15px] [&::-moz-range-thumb]:shadow-md [&::-moz-range-thumb]:rounded-xs [&::-moz-range-thumb]:mt-[-7px] [&::-moz-range-thumb]:cursor-pointer dark:[&::-moz-range-thumb]:bg-orange-300"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="audio.audio_time_total_title null"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="audio.change_playback_speed_aria null"
        class="h-10 w-10 flex items-center justify-center shrink-0"
        data-testid="audio-player-speed-button"
        title="audio.change_playback_speed_aria null"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="audio.audio_speed_menu_label null"
        class=" absolute -left-12 p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="audio.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
    <button
      aria-label="audio.stop_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-stop-button"
      title="audio.stop_audio_aria null"
    >
      <div>
        stop circle
      </div>
    </button>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
  />
</div>
`;

exports[`AudioPlayer should change states depending on whether the audio is playing, paused, or finished 3`] = `
<div>
  <div
    class="flex items-center gap-2 text-2xl w-full text-amber-900 dark:text-orange-300"
  >
    <button
      aria-label="audio.restart_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-play-button"
      title="audio.restart_audio_aria null"
    >
      <div>
        restart alt
      </div>
    </button>
    <code
      class="text-xs"
      title="audio.audio_time_elapsed_title null"
    >
      00:00
    </code>
    <input
      aria-label="audio.audio_scrubber_aria null"
      class="min-w-0 appearance-none [&::-webkit-slider-runnable-track]:bg-stone-500 [&::-webkit-slider-runnable-track]:h-[2px] [&::-webkit-slider-runnable-track]:cursor-pointer dark:[&::-webkit-slider-runnable-track]:bg-white [&::-moz-range-track]:bg-stone-500 [&::-moz-range-track]:h-[2px] [&::-moz-range-track]:cursor-pointer dark:[&::-moz-range-track]:bg-white [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:[-webkit-appearance: none] [&::-webkit-slider-thumb]:bg-amber-900 [&::-webkit-slider-thumb]:w-[6px] [&::-webkit-slider-thumb]:h-[15px] [&::-webkit-slider-thumb]:shadow-md [&::-webkit-slider-thumb]:rounded-xs [&::-webkit-slider-thumb]:mt-[-7px] [&::-webkit-slider-thumb]:cursor-pointer dark:[&::-webkit-slider-thumb]:bg-orange-300 [&::-moz-range-thumb]:appearance-none [&::-moz-range-thumb]:bg-amber-900 [&::-moz-range-thumb]:w-[6px] [&::-moz-range-thumb]:h-[15px] [&::-moz-range-thumb]:shadow-md [&::-moz-range-thumb]:rounded-xs [&::-moz-range-thumb]:mt-[-7px] [&::-moz-range-thumb]:cursor-pointer dark:[&::-moz-range-thumb]:bg-orange-300"
      min="0"
      step="0.1"
      type="range"
      value="0"
    />
    <code
      class="text-xs"
      title="audio.audio_time_total_title null"
    >
      00:00
    </code>
    <div
      class="relative"
    >
      <button
        aria-label="audio.change_playback_speed_aria null"
        class="h-10 w-10 flex items-center justify-center shrink-0"
        data-testid="audio-player-speed-button"
        title="audio.change_playback_speed_aria null"
      >
        <div>
          speed
        </div>
      </button>
      <ul
        aria-hidden="true"
        aria-label="audio.audio_speed_menu_label null"
        class=" absolute -left-12 p-3 bg-amber-50 shadow-lg rounded-sm border-[1px] border-amber-900 dark:bg-stone-950 dark:border-orange-300"
        data-testid="audio-player-speed-menu"
        hidden=""
        role="menu"
      >
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-0"
          role="menuitemradio"
          tabindex="0"
        >
          0.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-1"
          role="menuitemradio"
          tabindex="0"
        >
          0.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 0.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-2"
          role="menuitemradio"
          tabindex="0"
        >
          0.75x
        </li>
        <li
          aria-checked="true"
          aria-label="audio.audio_speed_item_label 1"
          class="font-bold text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-3"
          role="menuitemradio"
          tabindex="0"
        >
          global.normal
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.25"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-4"
          role="menuitemradio"
          tabindex="0"
        >
          1.25x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.5"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-5"
          role="menuitemradio"
          tabindex="0"
        >
          1.5x
        </li>
        <li
          aria-checked="false"
          aria-label="audio.audio_speed_item_label 1.75"
          class=" text-sm cursor-pointer my-2 hover:underline"
          data-testid="audio-player-speed-option-6"
          role="menuitemradio"
          tabindex="0"
        >
          1.75x
        </li>
      </ul>
    </div>
    <button
      aria-label="audio.stop_audio_aria null"
      class="h-10 w-10 flex items-center justify-center shrink-0"
      data-testid="audio-player-stop-button"
      title="audio.stop_audio_aria null"
    >
      <div>
        stop circle
      </div>
    </button>
  </div>
  <audio
    aria-labelledby="labelled by text"
    controls=""
    data-testid="audio-player-audio-element"
    hidden=""
  />
</div>
`;
